--- a/dev-Values.yaml
+++ b/dev-Values.yaml
@@ -16,7 +16,7 @@ ui:
 getTask:
   replicas: 2
   image:
-    name: todo-get-tasks-api
+    name: rk8sacr.azurecr.io/todo-get-tasks-api:v1
     tag: v1
   port: 8000
   ServicePort: 80
@@ -29,7 +29,7 @@ getTask:
 deleteTask:
   replicas: 2
   image:
-    name: todo-delete-tasks-api
+    name: rk8sacr.azurecr.io/todo-delete-tasks-api:v1
     tag: v1
   port: 8000
   ServicePort: 80
@@ -42,7 +42,7 @@ deleteTask:
 addTask:
   replicas: 2
   image:
-    name: todo-add-tasks-api
+    name: rk8sacr.azurecr.io/todo-add-tasks-api:v1
     tag: v1
   port: 8000
   ServicePort: 80
