--- a/dev-Values.yaml
+++ b/dev-Values.yaml
@@ -16,7 +16,7 @@ ui:
 getTask:
   replicas: 2
   image:
-    name: todo-get-tasks-api
+    name: todo-get-task
     tag: v1
   port: 8000
   ServicePort: 80
